# libass-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: CMakeLists.txt  FindNasm.cmake  freetype2.cmake  fribidi-gen.cmake  fribidi.cmake  harfbuzz.cmake  libass.cmake  utils.cmake
cmake/patches/: harfbuzz.mac.patch
src/fribidi-config/: config.h  fribidi-config.h
src/libass-config/: config.h  libass.def
