cmake_minimum_required(VERSION 3.2)

project(libass_cmake C)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY bin/${CMAKE_LIBRARY_ARCHITECTURE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY bin/${CMAKE_LIBRARY_ARCHITECTURE})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin/${CMAKE_LIBRARY_ARCHITECTURE})
set(CMAKE_PDB_OUTPUT_DIRECTORY bin/${CMAKE_LIBRARY_ARCHITECTURE})
set(CMAKE_COMPILE_PDB_OUTPUT_DIRECTORY bin/${CMAKE_LIBRARY_ARCHITECTURE})

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

add_library(libass STATIC
        src/main.c)
