cmake_minimum_required(VERSION 3.24.3)

include(cmake/utils.cmake)
ani_init()

project(libass_cmake C CXX ASM)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin/${ANI_TARGET_PLATFORM})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin/${ANI_TARGET_PLATFORM})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin/${ANI_TARGET_PLATFORM})
set(CMAKE_PDB_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin/${ANI_TARGET_PLATFORM})
set(CMAKE_COMPILE_PDB_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin/${ANI_TARGET_PLATFORM})

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

add_subdirectory(cmake)
